meja/tests/row-pattern-unexpected-args.meja
let f = fun (x : [`A]) => {
  switch (x) {
    | `A(b) => b
  };
};
